<resources>
    <string name="app_name">Application</string>
    <string name="gail">GAIL</string>
    <string name="button2">button</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="question01">Does the woman have a medical history of any breast cancer or of ductal carcinoma in situ (DCIS) or lobular carcinoma in situ (LCIS) or has she received previous radiation therapy to the chest for treatment of Hodgkin lymphoma?</string>
    <string-array name="question02">
        <item>Select</item>
        <item>Yes</item>
        <item>No</item>
        <item>Unknown</item>
    </string-array>
    <string name="question03">What is the woman\'s age? This tool only calculates risk for women 35 years of age or older.</string>
    <string-array name="question04">
        <item>Select</item>
        <item>7 to 11</item>
        <item>12 to 13</item>
        <item>&gt;= 14</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="question05">
        <item>Select</item>
        <item>No Births</item>
        <item>&lt; 20</item>
        <item>20 to 24</item>
        <item>25 to 29</item>
        <item>&gt;=30</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="question06">
        <item>Select</item>
        <item>0</item>
        <item>1</item>
        <item>&gt;1</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="question07">
        <item>Select</item>
        <item>Yes</item>
        <item>No</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="question07a">
        <item>Select</item>
        <item>1</item>
        <item>&gt;1</item>
    </string-array>
    <string-array name="question07b">
        <item>Select</item>
        <item>Yes</item>
        <item>No</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="question08">
        <item>Select</item>
        <item>White</item>
        <item>African American</item>
        <item>Hispanic</item>
        <item>Asian-American</item>
        <item>American Indian or Alaskan Native</item>
    </string-array>
    <string-array name="question08a">
        <item>Select</item>
        <item>Chinese</item>
        <item>Japanese</item>
        <item>Filipino</item>
        <item>Hawaiian</item>
        <item>Other Pacific Islander</item>
        <item>Other Asian American</item>
    </string-array>
    <string name="submit">Submit</string>
    <string name="about">About</string>
</resources>