<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="iain.application.MainActivity">

    <Button
        android:id="@+id/toGailButton"
        android:layout_width="172dp"
        android:layout_height="113dp"
        android:onClick="gotoGailSurveyPage1"
        android:text="@string/gail"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button2"
        android:layout_width="172dp"
        android:layout_height="113dp"
        android:layout_marginBottom="185dp"
        android:text="@string/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="66dp"
        android:layout_height="34dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="gotoGailInfoPage"
        android:text="@string/about"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="302dp"
        tools:layout_editor_absoluteY="461dp" />

</android.support.constraint.ConstraintLayout>
