<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="iain.application.GailSurveyPage2">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="245dp"
        android:layout_height="55dp"
        android:text="@string/question05"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.065" />

    <Spinner
        android:id="@+id/q05_spinner"
        android:layout_width="130dp"
        android:layout_height="31dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/question05"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.966"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="242dp"
        android:layout_height="54dp"
        android:text="@string/question06"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView7" />

    <Spinner
        android:id="@+id/q06_spinner"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/question06"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/q07_spinner"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/q05_spinner"
        app:layout_constraintVertical_bias="0.269"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="246dp"
        android:layout_height="48dp"
        android:text="@string/question07"
        android:textColor="@android:color/black"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Spinner
        android:id="@+id/q07_spinner"
        android:layout_width="108dp"
        android:layout_height="37dp"
        android:entries="@array/question07"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="31dp"
        app:layout_constraintBottom_toTopOf="@+id/q07a_spinner"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="226dp"
        android:layout_height="36dp"
        android:text="@string/question07a"
        android:textColor="@android:color/black"
        android:visibility="visible"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.19" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="228dp"
        android:layout_height="51dp"
        android:text="@string/question07b"
        android:textColor="@android:color/black"
        android:visibility="visible"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.178" />

    <Spinner
        android:id="@+id/q07a_spinner"
        android:layout_width="104dp"
        android:layout_height="34dp"
        android:entries="@array/question07a"
        android:visibility="visible"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toTopOf="@+id/q07b_spinner"
        android:layout_marginRight="16dp" />

    <Spinner
        android:id="@+id/q07b_spinner"
        android:layout_width="103dp"
        android:layout_height="35dp"
        android:entries="@array/question07b"
        android:visibility="visible"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toTopOf="@+id/q08_spinner" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="177dp"
        android:layout_height="40dp"
        android:text="@string/question08"
        android:textColor="@android:color/black"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="183dp"
        android:layout_height="39dp"
        android:text="@string/question08a"
        android:textColor="@android:color/black"
        android:visibility="visible"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.127" />

    <Spinner
        android:id="@+id/q08_spinner"
        android:layout_width="159dp"
        android:layout_height="33dp"
        android:entries="@array/question08"
        android:visibility="visible"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toTopOf="@+id/q08a_spinner"
        android:layout_marginRight="16dp" />

    <Spinner
        android:id="@+id/q08a_spinner"
        android:layout_width="159dp"
        android:layout_height="32dp"
        android:entries="@array/question08a"
        android:visibility="visible"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.961" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="gotoPage1"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="66dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="gotoResultPage"
        android:text="@string/submit"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintLeft_toRightOf="@+id/button5"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="61dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintVertical_bias="0.68" />
</android.support.constraint.ConstraintLayout>
